# tcpdemo

./: .gitignore  Cargo.toml  README.md
go/: go.mod
go/cmd/gocli/: gocli.go
go/cmd/gosvr/: gosvr.go
src/: cli.rs  smolcli.rs  smolsvr.rs  svr.rs
